[package]
name = "polymarket-maker-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
polymarket-client-sdk = { version = "0.3", features = ["ws"] }
tokio = { version = "1", features = ["full", "signal"] }
tokio-util = "0.7"
dotenv = "0.15"
log = "0.4"
env_logger = "0.10"
futures-util = "0.3"
rust_decimal = { version = "1.39", features = ["serde", "serde-with-str"] }
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
